# battle-rage

./: README.rst
battle-rage-1.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.mk  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
battle-rage-1.0/data/: Makefile.am  Makefile.in
battle-rage-1.0/data/Configuration/: game_config.ini
battle-rage-1.0/data/Documentation/: battle-rage_credits.html  battle-rage_fighters.html  battle-rage_fighting.html  battle-rage_game.html  battle-rage_joysticks.html  battle-rage_presentation.html  fighters_gallery.html  genindex.html  notice.html  objects.inv  search.html  searchindex.js
battle-rage-1.0/data/Documentation/_sources/: battle-rage_credits.txt  battle-rage_fighters.txt  battle-rage_fighting.txt  battle-rage_game.txt  battle-rage_joysticks.txt  battle-rage_presentation.txt  fighters_gallery.txt  notice.txt
battle-rage-1.0/data/Documentation/_static/: bizstyle.css  bizstyle.js
battle-rage-1.0/desktop/: Makefile.am  Makefile.in
battle-rage-1.0/doc/: Makefile.am  Makefile.in  battle-rage.html
battle-rage-1.0/man/: Makefile.am  Makefile.in  battle-rage.1
battle-rage-1.0/source/: Input_Handler.cpp  Input_Handler.h  Makefile.am  Makefile.in  Vector2D.h  choose_fighters.cpp  choose_fighters.h  configure_game_menu.cpp  configure_game_menu.h  fighting_mainloop.cpp  fighting_mainloop.h  global_fighters.cpp  global_fighters.h  global_vars.cpp  global_vars.h  helper_functions.cpp  helper_functions.h  helper_templates.h  joystick.cpp  joystick.h  joystick_configuration.cpp  joystick_configuration.h  main.cpp  main_menu.cpp  main_menu.h  presentation_screen.cpp  presentation_screen.h  round_interlude.cpp  round_interlude.h
battle-rage-1.0/source/Fighters/: Fighters.cpp  Fighters.h  Fuuma.cpp  Fuuma.h  Geese_Howard.cpp  Geese_Howard.h  Hanzo.cpp  Hanzo.h  Hotaru_Futaba.cpp  Hotaru_Futaba.h  Iori_Yagami.cpp  Iori_Yagami.h  K.cpp  K.h  Kim_Kaphwan.cpp  Kim_Kaphwan.h  Kisarah_Westfield.cpp  Kisarah_Westfield.h  Kyo_Kusanagi.cpp  Kyo_Kusanagi.h  Lee_Pai_Long.cpp  Lee_Pai_Long.h  Mai_Shiranui.cpp  Mai_Shiranui.h  Mr_Big.cpp  Mr_Big.h  Mr_Karate.cpp  Mr_Karate.h  Robert_Garcia.cpp  Robert_Garcia.h  Rock_Howard.cpp  Rock_Howard.h  Terry_Bogard.cpp  Terry_Bogard.h
battle-rage-1.0/source/Files/: SDL2_utils.cpp  SDL2_utils.h  draw_rect.cpp  draw_rect.h  images_utils.cpp  images_utils.h  ttf_utils.cpp  ttf_utils.h
battle-rage-1.0/source/headers/: defines.h  includes.h  usings.h
battle-rage-1.0/texi/: Makefile.am  Makefile.in  battle-rage.info  battle-rage.texi
