SUBDIRS = source data man texi doc desktop

#nobase_dist_pkgdata_DATA   =       ./source/*.cpp            \
#                              ./source/source/*.h       \
#                              ./source/Fighters/*.cpp   \
#                              ./source/Fighters/*.h     \
#                              ./source/Files/*.cpp      \
#                              ./source/Files/*.h        \
#                              ./source/headers/*.h      \
#                              ./Makefile.mk
                          
#EXTRA_DIST = ./Makefile.mk
                         